Fixed issues with wrapping and text size on mobile

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -295,6 +295,15 @@ p
       margin-left: -1rem
 
 @media (max-width: 72em)
+  h2
+    font-size: 190%
+  h3
+    font-size: 160%
+  h4
+    font-size: 130%
+  h5
+    font-size: 110%
+
   .text-block
     padding: 0.5rem 5% 0 5%
   .text-block.vw70
