--- a/source/stylesheets/portfolio.css.sass
+++ b/source/stylesheets/portfolio.css.sass
@@ -299,6 +299,9 @@ blockquote
   .share
     display: none
 
+  .blog-list
+    padding: 0 5% 3rem 5%
+
 @media (max-width: 72em)
   #preview
     .middle
